maze.lessons.maze.island.IslandMaze.scala.error
Escaper:11: error: expected class or object definition
def serpent(){
^Escaper:28: error: expected class or object definition
def estPositionFinale(): Boolean ={
^